fixed home sizing and spacing, letter spacing for small headings, removed nav social icon absolute positioning

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -290,6 +290,7 @@ h4 {
   text-rendering: optimizeLegibility;
   font-size: 1rem;
   line-height: 1.1;
+  letter-spacing: 1px;
 }
 h5 {
   margin-left: 0;
@@ -306,6 +307,7 @@ h5 {
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
   line-height: 1.1;
+  letter-spacing: 1px;
 }
 h6 {
   margin-left: 0;
